# sqlite3ListStore

./: CMakeLists.txt  main.c  window.ui
bdSQLite/: bd.sqlite
